--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "sanity": "^3.0.0",
     "sanity-plugin-iframe-pane": "^2.1.1",
     "styled-components": "^5.2.0",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "vercel": "^28.16.10"
   },
   "devDependencies": {
     "@sanity/eslint-config-studio": "^2.0.1",
